Add performance optimizations, ServiceResponse API, and JMH benchmarks
Performance:
- Replace per-request ConcurrentHashMap with pre-indexed Object[] arrays
  for DAG result storage (BuilderContext, SpringBuilderContext)
- Pre-compute DagNode index and int[] dependencyIndices at compile time
  to eliminate per-request map lookups in DagExecutor
- Switch to CompletableFuture[] array (not map) in DagExecutor
- Add radix trie route matching (RouteTrie) replacing linear scan
- Lazy header/query param materialization in LoomHttpContextImpl
- In-place path matching in RouteTrie — eliminate splitPath allocation

ServiceResponse API:
- Add ServiceResponse<T> record for non-throwing error handling
- Add ServiceClient.proxy() for raw byte passthrough with full metadata
- Add ServiceClient.exchange() for typed exchange without throwing
- Add RouteInvoker.*Response() methods (getResponse, postResponse, etc.)
- Implement proxy() and exchange() in RestServiceClient
- Wire passthrough mode through LoomHandlerAdapter using ServiceResponse

Benchmarks:
- Add loom-benchmark module with JMH benchmarks for DAG execution,
  route matching, context creation, JSON codec, and end-to-end pipeline

Docs:
- Update CLAUDE.md with ServiceResponse docs, benchmark commands,
  and module architecture
- Update README.md with new features

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>